styles/globals.scss
@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

* > * {
  font-family: 'Poppins', sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.input-text {
  @apply mt-1 block w-60 px-3 py-2 bg-white border border-slate-300 rounded-full text-sm shadow-sm placeholder-slate-500;
  @apply focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500;
}

.link-a {
  @apply text-[#fff] text-xl cursor-pointer;
}

.loader {
  @apply border-gray-200 rounded-full border-4 ease-linear h-10 w-10;
  border-top-color: #363ce0;
  animation: spinner 1.2s infinite;
}

@keyframes spinner {
  0% {transform: rotate(0deg);}
  100% {transform: rotate(360deg);}
}

h1 {
  font-size: 55px;
  text-transform: capitalize;
  line-height: 55px;
}


pre {
  width: 100%;
  background-color: #fff;
  padding: 20px;
  box-shadow: 0px 0px 10px #c4c4c4;
  border-radius: 14px;
  margin: 20px 0px;
  code {
    color: black;
  }
}



.content a {
  color: blue;
  text-transform: capitalize;
}
.content a:hover {
  text-decoration: underline;
}
.content ol {
  margin-left: 20px;
}

.content img {
  width: 100%;
  margin: 20px 0px;
}

.content strong {
  color: red;
}

.img-block {
  width: 100%;
  height: 100%;
  background-image: url('/images/progprogprog.avif');
  background-repeat: no-repeat;
  background-position: 0px 50%;
  background-size: cover;
  margin-top: 50px !important;
}

.first-screen {
  max-width: 1920px;
  margin: 0 auto;
}

.modal {
  @apply w-[100%] h-[100vh] bg-[rgba(0,0,0,.7)] backdrop-blur-xl fixed top-0 left-0 bottom-0 z-10 p-10 transition-opacity hidden md:hidden ;
}

.modal-active {
  @apply opacity-100 block
}


.dark {
  body {
    background-color: #c4c4c4;
  }
}

/* h1 {
  background: linear-gradient(#eee, #333);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
} */

